<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/team_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/team_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/team_number_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/team_number"
                    android:inputType="number" />

                <Button
                    android:id="@+id/button_autofill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_fill" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autonomous"
                    android:textSize="24sp" />

                <CheckBox
                    android:id="@+id/autonomous_knock_jewl_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/can_knock_jewel" />

                <CheckBox
                    android:id="@+id/autonomous_scan_pictograph_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/can_scan_pictograph" />

                <EditText
                    android:id="@+id/autonomous_glyphs_in_cryptograph_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/number_of_glyphs_scored"
                    android:inputType="number" />

                <CheckBox
                    android:id="@+id/autonomous_park_safe_zone_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parks_in_safe_zone" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teleop"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/teleop_glyphs_scored_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/number_of_glyphs_scored"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/teleop_rows_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rows" />

                    <CheckBox
                        android:id="@+id/teleop_columns_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/columns" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_game"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/endgame_can_recover_relic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/can_recover_relic" />

                    <CheckBox
                        android:id="@+id/endgame_relic_upright"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/relic_upright" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/endgame_relic_zone_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/zone_1" />

                    <CheckBox
                        android:id="@+id/endgame_relic_zone_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/zone_2" />

                    <CheckBox
                        android:id="@+id/endgame_relic_zone_40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/zone_3" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/endgame_balanced_end_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/balanced_at_end" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="66dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>